change: minor improvements